# hbot

./: .gitignore  FINAL_STATUS.md  LOCATION.md  PHASE1_COMPLETE.md  PHASE1_FINAL_REPORT.md  PROFESSIONAL_IMPROVEMENTS.md  QUICK_START.md  README.md  VERIFICATION_REPORT.md  pyproject.toml  pytest.ini  requirements.txt  test_imports.py
.github/workflows/: ci.yml
configs/: data_config.yaml  features_config.yaml  model_config.yaml
quantlab/: __init__.py  backtest.py  cross_validation.py  data_loader.py  data_validation.py  evaluation.py  feature_engineering.py  labeling.py  models.py  utils.py
quantlab/pipelines/: __init__.py  training_pipeline.py
tests/: __init__.py  test_backtest.py  test_data_loader.py  test_feature_engineering.py  test_labeling.py
